--- a/css/styles.css
+++ b/css/styles.css
@@ -101,14 +101,15 @@ header a:hover {
 
 
 #team {
-  margin-top: 60px;
-  font-family: "Times New Roman", Times, serif;
-  text-decoration: ;
+  margin-top: 75px 0;
+  
 }
 
-#team h1{
+#team h3{
   text-align: center;
-  font-size: 200%;
+  font-weight: bold;
+  letter-spacing: 2px;
+  padding-bottom: 10px;
   
   
 }
@@ -125,6 +126,7 @@ header a:hover {
   width: 150px;
   
 }
+
 
 aside#sidebar {
   float: right;
