--- a/css/login.css
+++ b/css/login.css
@@ -3,9 +3,10 @@
 }
 
 .hero{
-   height:100%;
+   
+    height:100%;
    width: 100%;
-   background-color: white;
+   background-color: #bdb9b9;
    background-position: center;
    background-size: cover;
    position: absolute;
@@ -15,7 +16,7 @@
       height: 500px;
       position: relative;
       margin: 6% auto;
-      background: orangered;
+      background: white;
         padding: 5px;
         overflow: hidden;
     }
@@ -24,7 +25,7 @@
         width: 220px;
         margin: 35px auto;
         position: relative;
-        box-shadow: 0 0 20px 9px #ff61241f;
+        box-shadow: 0 0 20px 9px #fcfbfa1f;
         border-radius: 30px;
     }
 
@@ -35,7 +36,7 @@
         border: 0;
         outline: none;
         position: relative;
-        color: white;
+        color: black;
     }
 
     #btn{
@@ -44,7 +45,7 @@
         position: absolute;
         width: 110px;
         height: 100%;
-        background: linear-gradient(to right, black, orangered);
+        background: linear-gradient(to right, white, orangered);
         border-radius: 30px;
         transition: .5s;
     }
@@ -63,8 +64,8 @@
         border-left: 0;
         border-top: 0;
         border-right: 0;
-        border-bottom: 1px solid white;
-        color: white;
+        border-bottom: 1px solid black;
+        color: black;
         outline: none;
         background: transparent;
     }
@@ -77,10 +78,10 @@
         display: block;
         margin: auto;
         background: black;
-        color: white;
+        color: orangered;
         border: 0;
         outline: none;
-        border-radius: 30px;
+        
     }
 
     .checkbox{
@@ -88,10 +89,11 @@
     }
 
     span{
-        color: white;
+        color:black;
         font-size: 12px;
         bottom: 40px;
         position: absolute;
+       
     }
 
     #login{
