--- a/css/styles.css
+++ b/css/styles.css
@@ -75,14 +75,29 @@ header a:hover {
   min-height: 400px;
   text-align: center;
   object-fit: contain;
-  background: url("../image/welcome2.png") 0 -100px;
-  color: black;
+  background: orangered;
+  color: white;
 }
+
+.banner {
+  margin-top: 100px;
+  
+}
+
 
 #showcase h1 {
   margin-top: 100px;
-  font-size: 25px;
+  font-size: 40px;
   margin-bottom: 10px;
+}
+
+#showcase h5 {
+  letter-spacing: .1em;
+}
+
+
+#showcase p {
+  margin-top: 10px;
 }
 #boxes {
   margin-top: 20px;
@@ -97,6 +112,7 @@ header a:hover {
 
 #boxes .box img {
   width: 90px;
+  border-radius: 1em;
 }
 
 
@@ -128,18 +144,18 @@ header a:hover {
 }
 
 
-aside#sidebar {
+aside #sidebar {
   float: right;
   width: 30%;
   margin-top: 10px;
 }
 
-article#main-col {
+article #main-col {
   float: left;
   width: 60%;
 }
 
-ul#services li {
+ul #services li {
   list-style: none;
   padding: 20px;
   border: #cccccc solid 1px;
@@ -163,16 +179,17 @@ footer {
   header nav li,
   #boxes.box,
   #article#main-col,
-  aside#sidebar {
-    float: none;
-    text-align: center;
-    width: 100%;
-  }
-  header {
-    padding-bottom: 20px;
-  }
 
-  #showcase h1 {
-    margin-top: 40px;
-  }
+}
+aside #sidebar {
+  float: none;
+  text-align: center;
+  width: 100%;
+}
+header {
+  padding-bottom: 20px;
+}
+
+#showcase h1 {
+  margin-top: 40px;
 }
