--- a/css/login.css
+++ b/css/login.css
@@ -1,107 +1,21 @@
-*{
-    font-family: sans-serif;
-}
-
-.hero{
+.gradient-custom-2 {
    
-    height:100%;
-   width: 100%;
-   background-color: #bdb9b9;
-   background-position: center;
-   background-size: cover;
-   position: absolute;
+    background: #fccb90;
+  
+
+    background: orangered;
+
+    background: orangered;
   }
-  .form-box{
-      width: 400px;
-      height: 500px;
-      position: relative;
-      margin: 6% auto;
-      background: white;
-        padding: 5px;
-        overflow: hidden;
+  
+  
+  @media (min-width: 768px) {
+    .gradient-form {
+      height: 100vh !important;
     }
-
-    .button-box{
-        width: 220px;
-        margin: 35px auto;
-        position: relative;
-        box-shadow: 0 0 20px 9px #fcfbfa1f;
-        border-radius: 30px;
+  }
+  @media (min-width: 769px) {
+    .gradient-custom-2 {
+      
     }
-
-    .toggle-btn{
-        padding: 10px 30px;
-        cursor: pointer;
-        background: transparent;
-        border: 0;
-        outline: none;
-        position: relative;
-        color: black;
-    }
-
-    #btn{
-        top: 0;
-        left: 0;
-        position: absolute;
-        width: 110px;
-        height: 100%;
-        background: linear-gradient(to right, white, orangered);
-        border-radius: 30px;
-        transition: .5s;
-    }
-
-    .input-group{
-        top: 180px;
-        position: absolute;
-        width: 280px;
-        transition: .5s;
-    }
-
-    .input-field{
-        width: 100%;
-        padding: 10px 0;
-        margin: 5px 0;
-        border-left: 0;
-        border-top: 0;
-        border-right: 0;
-        border-bottom: 1px solid black;
-        color: black;
-        outline: none;
-        background: transparent;
-    }
-    
-
-    .submit-btn{
-        width: 85%;
-        padding: 10px 30px;
-        cursor: pointer;
-        display: block;
-        margin: auto;
-        background: black;
-        color: orangered;
-        border: 0;
-        outline: none;
-        
-    }
-
-    .checkbox{
-        margin: 30px 10px 30px 0;
-    }
-
-    span{
-        color:black;
-        font-size: 12px;
-        bottom: 40px;
-        position: absolute;
-       
-    }
-
-    #login{
-        left: 50px;
-
-    }
-
-    #signup{
-        left: 450px;
-        
-    }
+  }
